Add a wait endpoint
