# 13_echo_service/public/swagger.json
@@ -48,6 +48,18 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"WaitResponse": {
+				"properties": {
+					"message": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"message"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -99,6 +111,35 @@
 				},
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/wait/{time}": {
+			"get": {
+				"operationId": "GetWait",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/WaitResponse"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "time",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
 			}
 		}
 	},
